* Created user interface element for RandomStartDelegate, so that players can pick which territory they want and what units they want in it. (veqryn)
* Gave all AIs methods to pick territories, and they will attempt to focus on a single area of the board. (veqryn)

* Created new game option property, "Territories Are Assigned Randomly", which determines if territories are randomly assigned or picked by players during RandomStartDelegate. (veqryn)

* Created new delegate, "RandomStartDelegate", which will allow for randomly assigned territories or territories chosen in turn order. (veqryn)


git-svn-id: https://svn.code.sf.net/p/triplea/code/trunk/triplea@3998 a4c711aa-641f-0410-879d-9b464e52b682