@@ -7,18 +7,23 @@ import games.strategy.engine.data.GameData;
 import games.strategy.engine.data.PlayerID;
 import games.strategy.engine.data.Territory;
 import games.strategy.engine.data.Unit;
+import games.strategy.engine.data.UnitType;
 import games.strategy.engine.message.IRemote;
 import games.strategy.engine.random.IRandomStats.DiceType;
 import games.strategy.triplea.formatter.MyFormatter;
 import games.strategy.util.CompositeMatchAnd;
+import games.strategy.util.IntegerMap;
 import games.strategy.util.Match;
+import games.strategy.util.Tuple;
 
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 /**
  * This delegate sets up the game according to Risk rules, with a few allowed customizations.
@@ -31,6 +36,7 @@ import java.util.List;
  */
 public class RandomStartDelegate extends BaseTripleADelegate
 {
+	private static final int UNITS_PER_PICK = 1;
 	protected PlayerID m_currentPickingPlayer = null;
 	
 	@Override
@@ -80,7 +86,7 @@ public class RandomStartDelegate extends BaseTripleADelegate
 	protected void setupBoard()
 	{
 		final GameData data = getData();
-		final boolean randomTerritories = true;
+		final boolean randomTerritories = games.strategy.triplea.Properties.getTerritoriesAreAssignedRandomly(data);
 		final Match<Territory> pickableTerritoryMatch = getTerritoryPickableMatch();
 		final Match<PlayerID> playerCanPickMatch = getPlayerCanPickMatch();
 		final List<Territory> allPickableTerritories = Match.getMatches(data.getMap().getTerritories(), pickableTerritoryMatch);
@@ -95,21 +101,57 @@ public class RandomStartDelegate extends BaseTripleADelegate
 			if (m_currentPickingPlayer == null || !playersCanPick.contains(m_currentPickingPlayer))
 				m_currentPickingPlayer = playersCanPick.get(0);
 			
-			final Territory picked;
+			Territory picked;
 			if (randomTerritories)
 			{
+				final IntegerMap<UnitType> costs = BattleCalculator.getCostsForTUV(m_currentPickingPlayer, data);
+				final List<Unit> units = new ArrayList<Unit>(m_currentPickingPlayer.getUnits().getUnits());
+				Collections.sort(units, new UnitCostComparator(costs));
+				final Set<Unit> unitsToPlace = new HashSet<Unit>();
+				unitsToPlace.add(units.get(0));
 				final int random;
 				if (allPickableTerritories.size() == 1)
 					random = 0;
 				else
 					random = m_bridge.getRandom(allPickableTerritories.size(), null, DiceType.ENGINE, "Picking random territory for " + m_currentPickingPlayer.getName());
 				picked = allPickableTerritories.get(random);
-				m_bridge.getHistoryWriter().addChildToEvent(m_currentPickingPlayer.getName() + " receives territory " + picked.getName(), picked);
-				m_bridge.addChange(ChangeFactory.changeOwner(picked, m_currentPickingPlayer));
+				final CompositeChange change = new CompositeChange();
+				change.add(ChangeFactory.changeOwner(picked, m_currentPickingPlayer));
+				final Collection<Unit> factoryAndInfrastructure = Match.getMatches(unitsToPlace, Matches.UnitIsInfrastructure);
+				if (!factoryAndInfrastructure.isEmpty())
+					change.add(OriginalOwnerTracker.addOriginalOwnerChange(factoryAndInfrastructure, m_currentPickingPlayer));
+				change.add(ChangeFactory.removeUnits(m_currentPickingPlayer, unitsToPlace));
+				change.add(ChangeFactory.addUnits(picked, unitsToPlace));
+				m_bridge.getHistoryWriter().addChildToEvent(
+							m_currentPickingPlayer.getName() + " receives territory " + picked.getName() + " with units " + MyFormatter.unitsToTextNoOwner(unitsToPlace), picked);
+				m_bridge.addChange(change);
 			}
 			else
 			{
-				picked = null; // TODO: ui
+				Tuple<Territory, Set<Unit>> pick;
+				Set<Unit> unitsToPlace;
+				while (true)
+				{
+					pick = getRemotePlayer(m_currentPickingPlayer).pickTerritoryAndUnits(new ArrayList<Territory>(allPickableTerritories),
+								new ArrayList<Unit>(m_currentPickingPlayer.getUnits().getUnits()), UNITS_PER_PICK);
+					picked = pick.getFirst();
+					unitsToPlace = pick.getSecond();
+					if (!allPickableTerritories.contains(picked) || !m_currentPickingPlayer.getUnits().getUnits().containsAll(unitsToPlace) || unitsToPlace.size() > UNITS_PER_PICK
+									|| (unitsToPlace.size() < UNITS_PER_PICK && unitsToPlace.size() < m_currentPickingPlayer.getUnits().getUnits().size()))
+						getRemotePlayer(m_currentPickingPlayer).reportMessage("Chosen territory or units invalid!", "Chosen territory or units invalid!");
+					else
+						break;
+				}
+				final CompositeChange change = new CompositeChange();
+				change.add(ChangeFactory.changeOwner(picked, m_currentPickingPlayer));
+				final Collection<Unit> factoryAndInfrastructure = Match.getMatches(unitsToPlace, Matches.UnitIsInfrastructure);
+				if (!factoryAndInfrastructure.isEmpty())
+					change.add(OriginalOwnerTracker.addOriginalOwnerChange(factoryAndInfrastructure, m_currentPickingPlayer));
+				change.add(ChangeFactory.removeUnits(m_currentPickingPlayer, unitsToPlace));
+				change.add(ChangeFactory.addUnits(picked, unitsToPlace));
+				m_bridge.getHistoryWriter().addChildToEvent(
+							m_currentPickingPlayer.getName() + " picks territory " + picked.getName() + " and places in it " + MyFormatter.unitsToTextNoOwner(unitsToPlace), unitsToPlace);
+				m_bridge.addChange(change);
 			}
 			allPickableTerritories.remove(picked);
 			final PlayerID lastPlayer = m_currentPickingPlayer;
@@ -126,12 +168,22 @@ public class RandomStartDelegate extends BaseTripleADelegate
 				m_currentPickingPlayer = playersCanPick.get(0);
 			
 			final List<Territory> territoriesToPickFrom = data.getMap().getTerritoriesOwnedBy(m_currentPickingPlayer);
-			Collections.shuffle(territoriesToPickFrom);
-			final Territory picked = territoriesToPickFrom.get(0); // TODO: implement ui
+			Tuple<Territory, Set<Unit>> pick;
+			Territory picked;
+			Set<Unit> unitsToPlace;
+			while (true)
+			{
+				pick = getRemotePlayer(m_currentPickingPlayer).pickTerritoryAndUnits(new ArrayList<Territory>(territoriesToPickFrom),
+								new ArrayList<Unit>(m_currentPickingPlayer.getUnits().getUnits()), UNITS_PER_PICK);
+				picked = pick.getFirst();
+				unitsToPlace = pick.getSecond();
+				if (!territoriesToPickFrom.contains(picked) || !m_currentPickingPlayer.getUnits().getUnits().containsAll(unitsToPlace) || unitsToPlace.size() > UNITS_PER_PICK
+							|| (unitsToPlace.size() < UNITS_PER_PICK && unitsToPlace.size() < m_currentPickingPlayer.getUnits().getUnits().size()))
+					getRemotePlayer(m_currentPickingPlayer).reportMessage("Chosen territory or units invalid!", "Chosen territory or units invalid!");
+				else
+					break;
+			}
 			final CompositeChange change = new CompositeChange();
-			final Unit unitToPlace = m_currentPickingPlayer.getUnits().getUnits().iterator().next(); // TODO: implement me
-			final Collection<Unit> unitsToPlace = new HashSet<Unit>();
-			unitsToPlace.add(unitToPlace);
 			final Collection<Unit> factoryAndInfrastructure = Match.getMatches(unitsToPlace, Matches.UnitIsInfrastructure);
 			if (!factoryAndInfrastructure.isEmpty())
 				change.add(OriginalOwnerTracker.addOriginalOwnerChange(factoryAndInfrastructure, m_currentPickingPlayer));
@@ -163,7 +215,7 @@ public class RandomStartDelegate extends BaseTripleADelegate
 	
 	public Match<Territory> getTerritoryPickableMatch()
 	{
-		return new CompositeMatchAnd<Territory>(Matches.TerritoryIsLand, Matches.TerritoryIsNotImpassable, Matches.isTerritoryOwnedBy(PlayerID.NULL_PLAYERID));
+		return new CompositeMatchAnd<Territory>(Matches.TerritoryIsLand, Matches.TerritoryIsNotImpassable, Matches.isTerritoryOwnedBy(PlayerID.NULL_PLAYERID), Matches.TerritoryIsEmpty);
 	}
 	
 	public Match<PlayerID> getPlayerCanPickMatch()
@@ -196,4 +248,46 @@ class RandomStartExtendedDelegateState implements Serializable
 	Serializable superState;
 	// add other variables here:
 	public PlayerID m_currentPickingPlayer;
+}
+
+
+class UnitCostComparator implements Comparator<Unit>
+{
+	private final IntegerMap<UnitType> m_costs;
+	
+	public UnitCostComparator(final IntegerMap<UnitType> costs)
+	{
+		m_costs = costs;
+	}
+	
+	public UnitCostComparator(final PlayerID player, final GameData data)
+	{
+		m_costs = BattleCalculator.getCostsForTUV(player, data);
+	}
+	
+	public int compare(final Unit u1, final Unit u2)
+	{
+		return m_costs.getInt(u1.getType()) - m_costs.getInt(u2.getType());
+	}
+}
+
+
+class UnitTypeCostComparator implements Comparator<UnitType>
+{
+	private final IntegerMap<UnitType> m_costs;
+	
+	public UnitTypeCostComparator(final IntegerMap<UnitType> costs)
+	{
+		m_costs = costs;
+	}
+	
+	public UnitTypeCostComparator(final PlayerID player, final GameData data)
+	{
+		m_costs = BattleCalculator.getCostsForTUV(player, data);
+	}
+	
+	public int compare(final UnitType u1, final UnitType u2)
+	{
+		return m_costs.getInt(u1) - m_costs.getInt(u2);
+	}
 }
